--- a/ui.html
+++ b/ui.html
@@ -23,7 +23,7 @@
       <div class="webpage-top-column">
         <a class="webpage-header home">
           <i class="fas fa-home"></i>&nbsp;
-          STEM 11 - ZARA
+          STEM 11 - ZARAwe
         </a>
         <a class="webpage-header news">
           <i class="fas fa-newspaper"></i>&nbsp;
