Fixed Phone Sizes

--- a/ui.html
+++ b/ui.html
@@ -132,7 +132,7 @@
             <img class="webpage-officers-position-image" src="https://scontent.fmnl25-3.fna.fbcdn.net/v/t39.30808-6/369906827_122122923296004340_4205807753512471108_n.jpg?stp=cp6_dst-jpg&_nc_cat=106&ccb=1-7&_nc_sid=5614bc&_nc_eui2=AeGiVreUZ53HUjW77koDeelRW4fKQpyzgSlbh8pCnLOBKf7rsbcAt_lMnJ7VHaL7agGP7fnl-iKUJo-fYnsJgQek&_nc_ohc=LHRyqE3pE7AAX_UeFLf&_nc_ht=scontent.fmnl25-3.fna&oh=00_AfDyi2vC1SN2YYnTVYp_ISz0xOpTNrpOtAjTifYjPl-Qug&oe=650B8FE8">
 
             <div style="margin-left: 10px;">
-              <div class="webpage-officers-position">PUBLIC INFORMATION OFFICER #1</div>
+              <div class="webpage-officers-position">P.I.O #1</div>
               <div class="webpage-officers-position-holder">Kristian Paul Peralta</div>
             </div>
           </div>
@@ -141,7 +141,7 @@
             <img class="webpage-officers-position-image" src="https://scontent.fmnl25-3.fna.fbcdn.net/v/t39.30808-6/372971434_122122923326004340_3880656269889720739_n.jpg?stp=cp6_dst-jpg&_nc_cat=106&ccb=1-7&_nc_sid=5614bc&_nc_eui2=AeHZlpyyOoft_-FExSACZt9eB8JMKPw4idQHwkwo_DiJ1HTcyFHQalmoeZ5GZJmyaqS8uCFMwMFYDz32p3NV4QbF&_nc_ohc=LnZzUUCLRK0AX9mnHRp&_nc_ht=scontent.fmnl25-3.fna&oh=00_AfCxZ5tnS0UsBbSGI5YQsfBlbc-VdYWUm1uZzFdznUdpPg&oe=650B71EF">
 
             <div style="margin-left: 10px;">
-              <div class="webpage-officers-position">PUBLIC INFORMATION OFFICER #2</div>
+              <div class="webpage-officers-position">P.I.O #2</div>
               <div class="webpage-officers-position-holder">Denise Aleoney Agbay</div>
             </div>
           </div>
@@ -160,7 +160,7 @@
 
             <div style="margin-left: 10px;">
               <div class="webpage-officers-position">PEACE OFFICER #2</div>
-              <div class="webpage-officers-position-holder">Denise Aleoney Agbay</div>
+              <div class="webpage-officers-position-holder">Mariah Laizah</div>
             </div>
           </div>
 
