added new posts.

--- a/ui.html
+++ b/ui.html
@@ -35,7 +35,7 @@
         </a>
         <a class="webpage-header developers">
           <i class="fas fa-cog"></i>&nbsp;
-          Developers
+          Contributors
         </a>
       </div>
 
@@ -59,10 +59,18 @@
             <i class="fas fa-newspaper"></i>&nbsp;&nbsp;News
           </div>
           <div class="webpage-news-container">
+            <div class="webpage-news-contents-title">Happy Eryl Day!</div>
+            <div class="webpage-news-contents">
+              Happy birthday to our "huyyyy" girl, Eryl! Thank you for the moments you delighted us by your precious smiles, giving us the ENERGY🤌 we want. We, your ZARA family, will always be thankful that you're here spilling the chismis with us🤭. May the coming days bring you luck and happiness, enjoy your special day!
+              <img class="webpage-news-contents-photo photo" src="./images/postPhotos/eryl-day.jpg">
+              <div class="webpage-news-date">Date Added: 09/19/2023 | 7:30 PM</div>
+            </div>
+          </div>
+          <div class="webpage-news-container">
             <div class="webpage-news-contents-title">Happy Lawrence Day!</div>
             <div class="webpage-news-contents">
               Belated happy birthday, Lawrence! We wish you an enjoyable day and a year filled with love, happiness, success, and peace. Thank you for existing in this timeline. We, your Zara family are delighted for having you around. Enjoy your special day to the fullest!
-              <img class="webpage-news-contents-photo photo" src="./images/lawrence-day.jpg">
+              <img class="webpage-news-contents-photo photo" src="./images/postPhotos/lawrence-day.jpg">
               <div class="webpage-news-date">Date Added: 09/17/2023 | 6:15 PM</div>
             </div>
           </div>
@@ -182,9 +190,10 @@
             </div>
           </div>
         </div>
+        
 
         <div class="webpage-developers">
-          <div class="webpage-developers-title"><i class="fas fa-cog"></i>&nbsp; Website Developers</div>
+          <div class="webpage-developers-title"><i class="fas fa-cog"></i>&nbsp; Website Contributors</div>
           <div class="webpage-developers-information">
             <img src="https://cdn.discordapp.com/avatars/444021600333987840/eefc933d85b447f87b46296172956162.webp?size=128" alt="">
             <div class="webpage-developers-information-title">
@@ -192,9 +201,20 @@
             </div>
 
             <div class="webpage-developers-information-details">
-              cwbz#2206 nga pala, 16 yrs old.
+              Website Developer
             </div>
           </div>
+
+          <!-- <div class="webpage-developers-information">
+            <img src="./images/contributors/juanmateosilva.jpg" alt="">
+            <div class="webpage-developers-information-title">
+              John Matthew Silva
+            </div>
+
+            <div class="webpage-developers-information-details">
+              Professional Valorant Player | Iron III.
+            </div>
+          </div> -->
         </div>
       </div>
     </body>
